// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests react/LoadingSpinner Default 1`] = `
.c0 {
  box-sizing: content-box;
  margin: auto;
  padding: 16px;
  border-radius: 8px;
  font-size: 48px;
  width: 48px;
  height: 48px;
  opacity: 0.84;
  color: var(--charcoal-text4);
  background-color: var(--charcoal-background1);
}

.c1 {
  width: 1em;
  height: 1em;
  border-radius: 1em;
  background-color: currentColor;
  -webkit-animation: cNZOgq 1s both ease-out;
  animation: cNZOgq 1s both ease-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.c1[data-reset-animation] {
  -webkit-animation: none;
  animation: none;
}

<div
  data-dark={false}
>
  <div
    className="c0"
    role="progressbar"
    size={48}
  >
    <div
      className="c1"
      role="presentation"
    />
  </div>
</div>
`;

exports[`Storybook Tests react/LoadingSpinner Padding 1`] = `
.c0 {
  box-sizing: content-box;
  margin: auto;
  padding: 24px;
  border-radius: 8px;
  font-size: 48px;
  width: 48px;
  height: 48px;
  opacity: 0.84;
  color: var(--charcoal-text4);
  background-color: var(--charcoal-background1);
}

.c1 {
  width: 1em;
  height: 1em;
  border-radius: 1em;
  background-color: currentColor;
  -webkit-animation: cNZOgq 1s both ease-out;
  animation: cNZOgq 1s both ease-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.c1[data-reset-animation] {
  -webkit-animation: none;
  animation: none;
}

<div
  data-dark={false}
>
  <div
    className="c0"
    role="progressbar"
    size={48}
  >
    <div
      className="c1"
      role="presentation"
    />
  </div>
</div>
`;

exports[`Storybook Tests react/LoadingSpinner Size 1`] = `
.c0 {
  box-sizing: content-box;
  margin: auto;
  padding: 16px;
  border-radius: 8px;
  font-size: 128px;
  width: 128px;
  height: 128px;
  opacity: 0.84;
  color: var(--charcoal-text4);
  background-color: var(--charcoal-background1);
}

.c1 {
  width: 1em;
  height: 1em;
  border-radius: 1em;
  background-color: currentColor;
  -webkit-animation: cNZOgq 1s both ease-out;
  animation: cNZOgq 1s both ease-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.c1[data-reset-animation] {
  -webkit-animation: none;
  animation: none;
}

<div
  data-dark={false}
>
  <div
    className="c0"
    role="progressbar"
    size={128}
  >
    <div
      className="c1"
      role="presentation"
    />
  </div>
</div>
`;

exports[`Storybook Tests react/LoadingSpinner Transparent 1`] = `
.c0 {
  box-sizing: content-box;
  margin: auto;
  padding: 16px;
  border-radius: 8px;
  font-size: 48px;
  width: 48px;
  height: 48px;
  opacity: 0.84;
  color: var(--charcoal-text4);
  background-color: var(--charcoal-transparent);
}

.c1 {
  width: 1em;
  height: 1em;
  border-radius: 1em;
  background-color: currentColor;
  -webkit-animation: cNZOgq 1s both ease-out;
  animation: cNZOgq 1s both ease-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

.c1[data-reset-animation] {
  -webkit-animation: none;
  animation: none;
}

<div
  data-dark={false}
>
  <div
    className="c0"
    role="progressbar"
    size={48}
  >
    <div
      className="c1"
      role="presentation"
    />
  </div>
</div>
`;
